@@ -33,30 +33,113 @@
 
     <para>
       Concatenates an existing <emphasis>BRL-CAD</emphasis> database to the
-      database currently being edited. If an <emphasis>affix</emphasis> is
-      supplied, then all objects from the <emphasis>database_file</emphasis>
-      will have the <emphasis>affix</emphasis> added to their
-      names as a suffix (if the <emphasis>-s</emphasis> option is specified), or as a prefix
-      (if the <emphasis>-p</emphasis> option is specified). The <emphasis>-p</emphasis> is the default.
-      Note that each <emphasis>BRL-CAD</emphasis> object must have a unique
-      name, so care must be taken not to "dbconcat" a  database that has objects
-      with names the same as objects in the current database. 	The <command>dup</command>
-      command may be used to check for duplicate names. If the <command>dup</command>
-      command finds duplicate names, use the <emphasis>prefix</emphasis> option to both the
-      <command>dup</command> 	and <command>dbconcat</command> commands to find a
-      <emphasis>prefix</emphasis> that produces no duplicates.	If duplicate names
-      are encountered during the "dbconcat" process, there is an option to overwrite the current object.
-      If the <emphasis>-O</emphasis> option is supplied, all conlicts will automatically be overwritten.
-      Otherwise, computer-generated prefixes will be added to the object names coming
-      from the <emphasis>database_file</emphasis> (but member names appearing in combinations will not
-      be modified, so this is a dangerous practice and should be avoided). The <emphasis>-t</emphasis> option indicates that
-      the title of the <emphasis>database_file</emphasis> should become the title of the currently
-      edited database. The <emphasis>-u</emphasis> option indicates that the units of the
-      <emphasis>database_file</emphasis> should become the units of the currently edited database. Similarly,
-      the <emphasis>-c</emphasis> option indicates that the region color table of the currently edited database
-      should be replaced with that of the <emphasis>database_file</emphasis>.
+      database currently being edited. Note that each <emphasis>BRL-CAD</emphasis>
+      object must have a unique name, so care must be taken when using "dbconcat" to
+      import a database that has objects with names the same as objects in the current
+      database.
+    </para>
+    <para>
+      If confliting names are encountered, computer-generated prefixes will be added
+      to the object names coming from the incoming <emphasis>database_file</emphasis>.
+      HOWEVER, by default  member names appearing in combinations will NOT be modified
+      to reference the new names - this means that the imported combs will point to the
+      objects in the current database, NOT the copies brought in by dbconcat.  This is
+      dangerous and should be avoided unless the user knows exactly what they are doing.
+    </para>
+    <para>
+      One approach to resolving conflicting names is to simply overwrite the current objects.
+      If the <emphasis>-O</emphasis> option is supplied, all conlicts will automatically be resolved
+      by overwritting the original object with its replacment from <emphasis>database_file</emphasis>.
+      Note that using this option is destructive - old geometry is not preserved when being overwritten.
+      Consequently this should only be used when the intent is to NOT preserve the original data.
+    </para>
+    <para>
+      Aternately, if an <emphasis>affix</emphasis> string is supplied, then all objects from
+      the incoming <emphasis>database_file</emphasis> will have the <emphasis>affix</emphasis> added
+      to their names as a prefix (by default or if the <emphasis>-p</emphasis> option is specified),
+      or as a suffix (if the <emphasis>-s</emphasis> option is specified).  In either mode the
+      <emphasis>affix</emphasis> string is added to ALL incoming object names, not just those cases
+      where there is a conflict.  However, comb trees on incoming geometry are also updated to
+      reference the names using the <emphasis>affix</emphasis> string, so this offers a way to
+      bring hierarchies in correctly.
+    </para>
+    <para>
+      Note that specifying such an <emphasis>affix</emphasis> string is not a guarantee of
+      avoiding conflicts.  The <command>dup</command> command should be used to check for
+      duplicate names. If the <command>dup</command> command still finds duplicate
+      names, use the <emphasis>prefix</emphasis> option to both the <command>dup</command> and
+      <command>dbconcat</command> commands to find a <emphasis>prefix</emphasis> that produces
+      no duplicates.
+    </para>
+
+
+    <para>
+      Other options are used to indicate whether or not to preserve incoming metadata such as title, units
+      and region color table.
     </para>
   </refsection>
+
+  <refsection xml:id="dbconcat_options"><title>OPTIONS</title>
+
+    <variablelist remap="TP">
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-O</emphasis></term>
+	<listitem>
+	  <para>
+	    Overwrite objects in the current .g file in cases where incoming
+	    object names conflict. (WARNING: this option is destructive - old
+	    data is replaced by new.)
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-c</emphasis></term>
+	<listitem>
+	  <para>
+	     Indicates that the region color table of the currently edited database
+             should be replaced with that of <emphasis>database_file</emphasis>.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-p</emphasis></term>
+	<listitem>
+	  <para>
+	    Use the supplied <emphasis>affix</emphasis> string as a prefix when reading in object names. (Default.)
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-s</emphasis></term>
+	<listitem>
+	  <para>
+	    Use the supplied <emphasis>affix</emphasis> string as a suffix when reading in object names.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-t</emphasis></term>
+	<listitem>
+	  <para>
+	     Indicates that the title of the currently edited database
+             should be replaced with that of <emphasis>database_file</emphasis>.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-u</emphasis></term>
+	<listitem>
+          <para>
+	    Indicates that the units of the incoming <emphasis>database_file</emphasis> 
+	    should become the units of the currently edited database.
+	  </para>
+	</listitem>
+      </varlistentry>
+    </variablelist>
+
+  </refsection>
+
+
 
   <refsection xml:id="examples"><title>EXAMPLES</title>
 
