@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.3X.X                                     ---
 ----------------------------------------------------------------------
 
+* improved readability of dbconcat man page - Cliff Yapp
 * improved ambient occlusion rt during -k cut planes - Sean Morrison
 * changed rt ambient occlusion randomization default - Sean Morrison
 * added ambient occlusion example to rt manual pages - Sean Morrison
